--- a/SteamGridDB.Xbox/PrimaryWidget.xaml
+++ b/SteamGridDB.Xbox/PrimaryWidget.xaml
@@ -206,13 +206,25 @@
                                     Grid.Column="1"
                                     Margin="12,0,0,0"
                                     VerticalAlignment="Center">
+                                    <!--  Game Name  -->
                                     <TextBlock
                                         FontSize="13"
                                         FontWeight="SemiBold"
                                         Foreground="#FFFFFF"
+                                        Text="{x:Bind Name, Mode=OneWay}"
+                                        TextTrimming="CharacterEllipsis"
+                                        TextWrapping="NoWrap" />
+
+                                    <!--  Image Filename  -->
+                                    <TextBlock
+                                        FontSize="11"
+                                        Foreground="#99FFFFFF"
+                                        Opacity="0.9"
                                         Text="{x:Bind ImageFileName, Mode=OneWay}"
                                         TextTrimming="CharacterEllipsis"
                                         TextWrapping="NoWrap" />
+
+                                    <!--  Platform info  -->
                                     <TextBlock
                                         FontSize="11"
                                         Foreground="#99FFFFFF"
@@ -329,7 +341,8 @@
                     FontSize="14"
                     FontWeight="SemiBold"
                     Foreground="#FFFFFF"
-                    Text="Select artwork" />
+                    Text="{x:Bind GridPanelHeaderText}"
+                    TextWrapping="Wrap" />
 
                 <!--  Optional: More options button  -->
                 <Button
