--- a/SteamGridDB.Xbox/PrimaryWidget.xaml
+++ b/SteamGridDB.Xbox/PrimaryWidget.xaml
@@ -263,6 +263,7 @@
                                         Width="32"
                                         Height="32"
                                         Click="EditGameImage_Click"
+                                        IsEnabled="{x:Bind CanEditImage, Mode=OneWay}"
                                         Style="{StaticResource FluentIconButton}"
                                         Tag="{x:Bind}"
                                         ToolTipService.ToolTip="Change artwork">
