--- a/SteamGridDB.Xbox/MainPage.xaml
+++ b/SteamGridDB.Xbox/MainPage.xaml
@@ -6,5 +6,32 @@
     xmlns:local="using:SteamGridDB.Xbox"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    mc:Ignorable="d"/>
-
+    mc:Ignorable="d">
+    <Grid Grid.Row="1" Background="#1F1F1F">
+        <!--  Instructions panel  -->
+        <StackPanel
+                    x:Name="InstructionsPanel"
+                    Padding="24"
+                    VerticalAlignment="Center"
+                    Spacing="12">
+            <FontIcon
+                        HorizontalAlignment="Center"
+                        FontFamily="Segoe MDL2 Assets"
+                        FontSize="48"
+                        Foreground="#66FFFFFF"
+                        Glyph="&#xE7BA;" />
+            <TextBlock
+                        HorizontalAlignment="Center"
+                        FontSize="16"
+                        FontWeight="SemiBold"
+                        Foreground="#FFFFFF"
+                        Text="This app is an Xbox Game Bar widget only" />
+            <TextBlock
+                        HorizontalAlignment="Center"
+                        Foreground="#99FFFFFF"
+                        Text="To use this app, please find the SteamGridDB widget in the Xbox Game Bar by pressing Win + G or the nexus button on your Xbox controller"
+                        TextAlignment="Center"
+                        TextWrapping="Wrap" />
+        </StackPanel>
+    </Grid>
+</Page>
